@@ -12,6 +12,8 @@ import org.keycloak.models.KeycloakSession;
 import org.keycloak.models.KeycloakSessionFactory;
 import org.keycloak.provider.ProviderConfigProperty;
 
+import static io.phasetwo.keycloak.magic.MagicLink.CREATE_NONEXISTENT_USER_CONFIG_PROPERTY;
+
 @JBossLog
 @AutoService(AuthenticatorFactory.class)
 public class EmailOtpAuthenticatorFactory implements AuthenticatorFactory {
@@ -41,12 +43,12 @@ public class EmailOtpAuthenticatorFactory implements AuthenticatorFactory {
 
   @Override
   public boolean isConfigurable() {
-    return false;
+    return true;
   }
 
   @Override
   public boolean isUserSetupAllowed() {
-    return false;
+    return true;
   }
 
   @Override
@@ -66,7 +68,15 @@ public class EmailOtpAuthenticatorFactory implements AuthenticatorFactory {
 
   @Override
   public List<ProviderConfigProperty> getConfigProperties() {
-    return ImmutableList.of();
+    ProviderConfigProperty createUser = new ProviderConfigProperty();
+    createUser.setType(ProviderConfigProperty.BOOLEAN_TYPE);
+    createUser.setName(CREATE_NONEXISTENT_USER_CONFIG_PROPERTY);
+    createUser.setLabel("Force create user");
+    createUser.setHelpText(
+            "Creates a new user when an email is provided that does not match an existing user.");
+    createUser.setDefaultValue(false);
+
+    return List.of(createUser);
   }
 
   @Override
